<?xml version="1.0" encoding="utf-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="ipassmanager.OptionsViewModel" />

    </data>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OptionsFragment">

    <TextView
        android:id="@+id/tv_fo_backup"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:text="@string/backup"
        app:drawableStartCompat="@drawable/ic_backup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_fo_restore"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:text="@string/restore"
        app:drawableStartCompat="@drawable/ic_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fo_backup" />

    <TextView
        android:id="@+id/tv_fo_profile"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:text="@string/profile"
        app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fo_restore" />

    <TextView
        android:id="@+id/tv_fo_settings"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:text="@string/settings"
        app:drawableStartCompat="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fo_profile" />


    <TextView
        android:id="@+id/tv_fo_logout"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/logout"
        app:drawableTopCompat="@drawable/ic_logout_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fo_settings" />


    <View
        android:id="@+id/tv_fo_version"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        android:background="@color/secondaryDarkColor"
        android:drawablePadding="16dp"
        android:text="@string/settings"
        app:drawableStartCompat="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fo_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--</layout>-->
