<?xml version="1.0" encoding="utf-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="ipassmanager.backuprestore.BackupRestoreViewModel" />
    </data>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.backuprestore.BackupRestoreFragment">

    <!-- <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/clpb_fbr"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_margin="32dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_fbr_helper_text"
         app:layout_constraintBottom_toTopOf="@id/btn_fbr_skip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/clpb_fbr"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:elevation="20dp"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_fbr_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fbr_helper_text"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/secondaryLightColor"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loadinglock" />

    <TextView
        android:id="@+id/tv_fbr_title"
        style="@style/HeadingTextViewStylePrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_fbr"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fbr_title" />


    <TextView
        android:id="@+id/tv_fbr_from_to"
        style="@style/SubHeadingTextViewStyleDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="start"
        android:text="@string/from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_fbr" />

    <TextView
        android:id="@+id/btn_fbr_local"
        style="@style/FieldLabelTVStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="start"
        android:padding="32dp"
        android:text="@string/storage"
        android:textAllCaps="false"
        app:drawableStartCompat="@drawable/ic_baseline_storage_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fbr_from_to" />


    <TextView
        android:id="@+id/btn_fbr_drive"
        style="@style/FieldLabelTVStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="start"
        android:padding="32dp"
        android:text="@string/drive"
        android:textAllCaps="false"
        app:drawableStartCompat="@drawable/ic_baseline_cloud_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fbr_local" />

    <TextView
        android:id="@+id/tv_fbr_helper_text"
        style="@style/SubHeadingTextViewStyleLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fbr_drive"
        tools:text="@string/app_name_other" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fbr_skip"
        style="@style/SecondaryTextMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout><!--
</layout>-->
